fixed contact section on mobile - used flex approach

--- a/src/app/contact-section/contact-section.component.scss
+++ b/src/app/contact-section/contact-section.component.scss
@@ -147,6 +147,10 @@
   width: 100vw;
   max-width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   // background: black;
 
   & p {
